# AndroidNdkToturial

./: .gitignore  README.md  settings.gradle
AndroidCmake/: README.MD  build.gradle
AndroidCmake/libs_jniLIbs/: jniLibs.7z
AndroidCmake/src/androidTest/java/com/gooker/ndk/toturial/: ExampleInstrumentedTest.java
AndroidCmake/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidCmake/src/main/cpp/inc/: fmod_common.h
AndroidCmake/src/main/java/com/gooker/ndk/toturial/: MainActivity.java
AndroidCmake/src/main/res/values/: strings.xml
AndroidCmakeDepSo/: README.MD  build.gradle
AndroidCmakeDepSo/src/androidTest/java/com/gooker/ndk/rtmp/: ExampleInstrumentedTest.java
AndroidCmakeDepSo/src/main/: AndroidManifest.xml
AndroidCmakeDepSo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidCmakeDepSo/src/main/java/com/gooker/ndk/rtmp/: MainActivity.java
AndroidCmakeDepSo/src/main/res/layout/: activity_main.xml
AndroidCmakeDepSo/src/main/res/values/: strings.xml  themes.xml
AndroidCmakeDepSo/src/main/res/values-night/: themes.xml
AndroidCmakeL/: README.MD  build.gradle
AndroidCmakeL/src/main/: AndroidManifest.xml
AndroidCmakeL/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidMK/: build.gradle
AndroidMK/src/main/: AndroidManifest.xml
AndroidMK/src/main/ndkBuild/: Android.mk  hello-jni.c
AndroidMK/src/main/res/layout/: activity_android_mkmain.xml
AndroidMK/src/main/res/values/: strings.xml  themes.xml
AndroidMK/src/main/res/values-night/: themes.xml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
